--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   Vishva Dalela
     *****************
 */
 
@@ -190,10 +190,4 @@ section
 {
 
 }
-*/
-
-/*
-    *****************
-    DONE BY:-   TUMMALA KETHAN
-    *****************
 */
